# sysup

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  LICENSE  Makefile  README.md  SECURITY.md  pyproject.toml  renovate.json
.amazonq/rules/: implementation-rules.md  quality-rules.md  windows-tasks.md
.github/: dependabot.yml
.github/workflows/: ci.yml  codeql.yml  release.yml
archive/: up.sh
archive/bash-prototype/config/: sysup.conf.example
archive/bash-prototype/lib/core/: checks.sh  common.sh  config.sh  stats.sh
config/: sysup.toml.example  sysup.windows.toml.example
docs/: AUTO_RUN.md  CONFIGURATION.md  CONTRIBUTING.md  INIT_COMMAND_SPEC.md  QUALITY_IMPROVEMENT_PLAN.md  SECURITY_SETUP.md  USAGE.md  WINDOWS_SETUP.md  WINDOWS_SUPPORT_PLAN.md  WSL_SETUP.md  windows_developer_plan.md
docs/implement/: sysup-implementation-plan.md
src/sysup/: __init__.py  _typing_compat.py  cli.py
src/sysup/cli/: __init__.py  __main__.py  cli.py  init.py
src/sysup/core/: __init__.py  backup.py  checks.py  command.py  config.py  logging.py  notification.py  platform.py  self_update.py  stats.py  wsl.py
src/sysup/updaters/: __init__.py  apt.py  base.py  brew.py  cargo.py  firmware.py  flatpak.py  gem.py  npm.py  nvm.py  pipx.py  pnpm.py  rustup.py  scoop.py  snap.py  uv.py
tests/: __init__.py  test_additional_updaters.py  test_backup.py  test_base_updater.py  test_checks.py  test_cli.py  test_config.py  test_init_command.py  test_logging.py  test_notification.py  test_platform.py  test_scoop.py  test_self_update.py  test_stats.py  test_updaters.py  test_wsl.py
tests/e2e/: conftest.py  test_init_e2e.py  test_update_e2e.py
