[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sysup"
version = "0.8.1"
description = "システムと各種パッケージマネージャを統合的に更新するツール"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "scottlz0310", email = "scottlz0310@users.noreply.github.com" },
]
keywords = ["system", "update", "package-manager", "automation"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: System :: Systems Administration",
]
dependencies = [
    "click>=8.1.0",
    "rich>=13.0.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
]

[dependency-groups]
dev = [
    "ruff>=0.1.0",
    "basedpyright>=1.24.0",
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.21.0",
    "pytest-timeout>=2.2.0",
    "pre-commit>=3.5.0",
    "bandit[toml]>=1.7.0",
    "typing-extensions>=4.12.0; python_version<'3.12'",
]

[project.scripts]
sysup = "sysup.cli:main"

[project.urls]
Homepage = "https://github.com/scottlz0310/sysup"
Repository = "https://github.com/scottlz0310/sysup"
Issues = "https://github.com/scottlz0310/sysup/issues"

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "F",    # pyflakes
    "W",    # pycodestyle warnings
    "I",    # isort
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "C90",  # mccabe complexity
    "T20",  # flake8-print
    "N",    # pep8-naming
    "D",    # pydocstyle
    "RUF",  # Ruff-specific rules
]
ignore = [
    "E501",   # line-too-long (handled by formatter)
    "C901",   # complex-structure
    "D203",   # one-blank-line-before-class (incompatible with D211)
    "D213",   # multi-line-summary-second-line (incompatible with D212)
    "RUF001", # ambiguous-unicode-character-string (日本語の全角記号を許可)
    "RUF002", # ambiguous-unicode-character-docstring (日本語の全角記号を許可)
    "RUF003", # ambiguous-unicode-character-comment (日本語の全角記号を許可)
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["D"]  # テストファイルはDocstring不要

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = true

[tool.basedpyright]
pythonVersion = "3.11"
typeCheckingMode = "all"
reportUnusedVariable = true
reportUnusedImport = true
reportMissingTypeStubs = false
reportUnnecessaryTypeIgnoreComment = true
reportUnnecessaryCast = true
reportImplicitStringConcatenation = true
reportMissingSuperCall = true
reportPropertyTypeMismatch = true
reportUninitializedInstanceVariable = true
reportUnnecessaryContains = true
reportUnnecessaryIsInstance = true
reportUnusedCallResult = false  # CLI tools often ignore return values
reportDeprecated = true
reportIncompatibleMethodOverride = true
reportIncompatibleVariableOverride = true
reportInconsistentConstructor = true
reportOverlappingOverload = true
reportPossiblyUnboundVariable = true
reportAny = false  # Dynamic config/JSON parsing unavoidably uses Any
reportExplicitAny = false  # Dynamic config/JSON parsing requires explicit Any
include = ["src"]
exclude = ["**/__pycache__", "**/.venv", "src/sysup/_typing_compat.py"]

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --strict-markers --strict-config"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
timeout = 300
timeout_method = "thread"

[tool.coverage.run]
source = ["src"]
branch = true

[tool.coverage.report]
# 段階的厳格化: prototype=閾値なし, staging=60%, production=80%
fail_under = 80  # v0.4.0で有効化（現在87.14%達成済み）
precision = 2
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]

[tool.bandit]
exclude_dirs = ["tests", "archive"]
skips = ["B101", "B601"]
